--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,347 +1,347 @@
 services:
-  postgres:
-    container_name: postgres
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
-      PGDATA: /data/postgres
-    volumes:
-      - postgres:/data/postgres
-    ports:
-      - "5432:5432"
-    networks:
-      - postgres
-    restart: unless-stopped
+    postgres:
+        container_name: postgres
+        image: postgres
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: root
+            PGDATA: /data/postgres
+        volumes:
+            - postgres:/data/postgres
+        ports:
+            - "5432:5432"
+        networks:
+            - postgres
+        restart: unless-stopped
 
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-    volumes:
-      - pgadmin:/var/lib/pgadmin
-    ports:
-      - "5050:80"
-    networks:
-      - postgres
-    restart: unless-stopped
+    pgadmin:
+        container_name: pgadmin
+        image: dpage/pgadmin4
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+            PGADMIN_CONFIG_SERVER_MODE: 'False'
+        volumes:
+            - pgadmin:/var/lib/pgadmin
+        ports:
+            - "5050:80"
+        networks:
+            - postgres
+        restart: unless-stopped
 
-  zipkin:
-    image: openzipkin/zipkin
-    container_name: zipkin
-    ports:
-      - "9411:9411"
-    networks:
-      - spring
+    zipkin:
+        image: openzipkin/zipkin
+        container_name: zipkin
+        ports:
+            - "9411:9411"
+        networks:
+            - spring
 
-  rabbitmq:
-    image: rabbitmq:3.9.11-management-alpine
-    container_name: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    networks:
-      - spring
+    rabbitmq:
+        image: rabbitmq:3.9.11-management-alpine
+        container_name: rabbitmq
+        ports:
+            - "5672:5672"
+            - "15672:15672"
+        networks:
+            - spring
 
-  grafana:
-    container_name: grafana
-    build: "dashboard/grafana"
-    ports:
-      - "3001:3000"
-    volumes:
-      - ./grafana:/var/lib/grafana
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-    networks:
-      monitoring:
-        aliases:
-          - grafana
+    grafana:
+        container_name: grafana
+        build: 'dashboard/grafana'
+        ports:
+            - "3001:3000"
+        volumes:
+            - ./grafana:/var/lib/grafana
+        environment:
+            - GF_SECURITY_ADMIN_USER=admin
+            - GF_SECURITY_ADMIN_PASSWORD=admin
+        networks:
+            monitoring:
+                aliases:
+                    - grafana
 
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./dashboard/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./prometheus:/prometheus
-    networks:
-      monitoring:
-        aliases:
-          - prometheus
+    prometheus:
+        image: prom/prometheus
+        container_name: prometheus
+        ports:
+            - "9090:9090"
+        volumes:
+            - ./dashboard/prometheus.yml:/etc/prometheus/prometheus.yml
+            - ./prometheus:/prometheus
+        networks:
+            monitoring:
+                aliases:
+                    - prometheus
 
-  eureka-server:
-    image: merikbest/twitter-spring-reactjs:eureka-server
-    container_name: eureka-server
-    hostname: eureka-server
-    environment:
-      EUREKA_HOST: eureka-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8761:8761"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
+    eureka-server:
+        image: merikbest/twitter-spring-reactjs:eureka-server
+        container_name: eureka-server
+        hostname: eureka-server
+        environment:
+            EUREKA_HOST: eureka-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8761:8761"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
 
-  config-server:
-    image: merikbest/twitter-spring-reactjs:config-server
-    container_name: config-server
-    hostname: config-server
-    environment:
-      EUREKA_HOST: eureka-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8888:8888"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
+    config-server:
+        image: merikbest/twitter-spring-reactjs:config-server
+        container_name: config-server
+        hostname: config-server
+        environment:
+            EUREKA_HOST: eureka-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8888:8888"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
+            - eureka-server
 
-  api-gateway:
-    image: merikbest/twitter-spring-reactjs:api-gateway
-    container_name: api-gateway
-    hostname: api-gateway
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8000:8000"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
-      - config-server
+    api-gateway:
+        image: merikbest/twitter-spring-reactjs:api-gateway
+        container_name: api-gateway
+        hostname: api-gateway
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8000:8000"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
+            - eureka-server
+            - config-server
 
-  user-service:
-    image: merikbest/twitter-spring-reactjs:user-service
-    container_name: user-service
-    hostname: user-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8001:8001"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    frontend:
+        container_name: frontend
+        image: azoum271/twitter:latest  # Updated image tag
+        ports:
+            - "8081:80"  # Map the frontend service to port 8081 on the host
+        networks:
+            - spring
+        depends_on:
+            - api-gateway  # This assumes the frontend depends on the API gateway or adjust as needed
 
-  tweet-service:
-    image: merikbest/twitter-spring-reactjs:tweet-service
-    container_name: tweet-service
-    hostname: tweet-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8002:8002"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    user-service:
+        image: merikbest/twitter-spring-reactjs:user-service
+        container_name: user-service
+        hostname: user-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8001:8001"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  topic-service:
-    image: merikbest/twitter-spring-reactjs:topic-service
-    container_name: topic-service
-    hostname: topic-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8003:8003"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    tweet-service:
+        image: merikbest/twitter-spring-reactjs:tweet-service
+        container_name: tweet-service
+        hostname: tweet-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8002:8002"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  tag-service:
-    image: merikbest/twitter-spring-reactjs:tag-service
-    container_name: tag-service
-    hostname: tag-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8004:8004"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    topic-service:
+        image: merikbest/twitter-spring-reactjs:topic-service
+        container_name: topic-service
+        hostname: topic-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8003:8003"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  lists-service:
-    image: merikbest/twitter-spring-reactjs:lists-service
-    container_name: lists-service
-    hostname: lists-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8005:8005"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    tag-service:
+        image: merikbest/twitter-spring-reactjs:tag-service
+        container_name: tag-service
+        hostname: tag-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8004:8004"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  chat-service:
-    image: merikbest/twitter-spring-reactjs:chat-service
-    container_name: chat-service
-    hostname: chat-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8006:8006"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    lists-service:
+        image: merikbest/twitter-spring-reactjs:lists-service
+        container_name: lists-service
+        hostname: lists-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8005:8005"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  notification-service:
-    image: merikbest/twitter-spring-reactjs:notification-service
-    container_name: notification-service
-    hostname: notification-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      DATASOURCE_HOST: postgres
-      ZIPKIN_HOST: zipkin
-      RABBITMQ_HOST: rabbitmq
-    ports:
-      - "8007:8007"
-    networks:
-      - postgres
-      - spring
-    depends_on:
-      - postgres
-      - zipkin
-      - rabbitmq
-      - eureka-server
-      - config-server
+    chat-service:
+        image: merikbest/twitter-spring-reactjs:chat-service
+        container_name: chat-service
+        hostname: chat-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8006:8006"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  email-service:
-    image: merikbest/twitter-spring-reactjs:email-service
-    container_name: email-service
-    hostname: email-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8020:8020"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
-      - config-server
+    notification-service:
+        image: merikbest/twitter-spring-reactjs:notification-service
+        container_name: notification-service
+        hostname: notification-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            DATASOURCE_HOST: postgres
+            ZIPKIN_HOST: zipkin
+            RABBITMQ_HOST: rabbitmq
+        ports:
+            - "8007:8007"
+        networks:
+            - postgres
+            - spring
+        depends_on:
+            - postgres
+            - zipkin
+            - rabbitmq
+            - eureka-server
+            - config-server
 
-  image-service:
-    image: merikbest/twitter-spring-reactjs:image-service
-    container_name: image-service
-    hostname: image-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8021:8021"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
-      - config-server
+    email-service:
+        image: merikbest/twitter-spring-reactjs:email-service
+        container_name: email-service
+        hostname: email-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8020:8020"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
+            - eureka-server
+            - config-server
 
-  websocket-service:
-    image: merikbest/twitter-spring-reactjs:websocket-service
-    container_name: websocket-service
-    hostname: websocket-service
-    environment:
-      EUREKA_HOST: eureka-server
-      CONFIG_SERVER_HOST: config-server
-      ZIPKIN_HOST: zipkin
-    ports:
-      - "8022:8022"
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
-      - config-server
-  frontend:
-    image: azoum271/twitter:latest # Use the azoum271/twitter Docker image with the latest tag for the frontend service
-    container_name: frontend
-    ports:
-      - "3000:3000" # Adjust the port if your Node.js app runs on a different port
-    networks:
-      - spring
-    depends_on:
-      - api-gateway # Adjust this depending on your dependencies
-    restart: unless-stopped
+    image-service:
+        image: merikbest/twitter-spring-reactjs:image-service
+        container_name: image-service
+        hostname: image-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8021:8021"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
+            - eureka-server
+            - config-server
+
+    websocket-service:
+        image: merikbest/twitter-spring-reactjs:websocket-service
+        container_name: websocket-service
+        hostname: websocket-service
+        environment:
+            EUREKA_HOST: eureka-server
+            CONFIG_SERVER_HOST: config-server
+            ZIPKIN_HOST: zipkin
+        ports:
+            - "8022:8022"
+        networks:
+            - spring
+        depends_on:
+            - zipkin
+            - eureka-server
+            - config-server
 
 networks:
-  postgres:
-    driver: bridge
-  spring:
-    driver: bridge
-  monitoring:
+    postgres:
+        driver: bridge
+    spring:
+        driver: bridge
+    monitoring:
 
 volumes:
-  postgres:
-  pgadmin:
+    postgres:
+    pgadmin:
